# Copyright 2022 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../../../scripts/build/ninja/copy.gni")

copy_to_gen("sourcemaps") {
  sources = [
    "basic-mapping-as-index-map.js",
    "basic-mapping-as-index-map.js.map",
    "basic-mapping-original.js",
    "basic-mapping.js",
    "basic-mapping.js.map",
    "ignore-list-empty.js",
    "ignore-list-empty.js.map",
    "ignore-list-out-of-bounds.js",
    "ignore-list-out-of-bounds.js.map",
    "ignore-list-valid-1.js",
    "ignore-list-valid-1.js.map",
    "ignore-list-wrong-type-1.js",
    "ignore-list-wrong-type-1.js.map",
    "ignore-list-wrong-type-2.js",
    "ignore-list-wrong-type-2.js.map",
    "ignore-list-wrong-type-3.js",
    "ignore-list-wrong-type-3.js.map",
    "index-map-invalid-base-mappings.js",
    "index-map-invalid-base-mappings.js.map",
    "index-map-invalid-order.js",
    "index-map-invalid-order.js.map",
    "index-map-invalid-overlap.js",
    "index-map-invalid-overlap.js.map",
    "index-map-missing-map.js",
    "index-map-missing-map.js.map",
    "index-map-missing-offset-column.js",
    "index-map-missing-offset-column.js.map",
    "index-map-missing-offset-line.js",
    "index-map-missing-offset-line.js.map",
    "index-map-missing-offset.js",
    "index-map-missing-offset.js.map",
    "index-map-offset-column-wrong-type.js",
    "index-map-offset-column-wrong-type.js.map",
    "index-map-offset-line-wrong-type.js",
    "index-map-offset-line-wrong-type.js.map",
    "index-map-two-concatenated-sources.js",
    "index-map-two-concatenated-sources.js.map",
    "index-map-wrong-type-map.js",
    "index-map-wrong-type-map.js.map",
    "index-map-wrong-type-offset.js",
    "index-map-wrong-type-offset.js.map",
    "index-map-wrong-type-sections.js",
    "index-map-wrong-type-sections.js.map",
    "invalid-mapping-bad-separator.js",
    "invalid-mapping-bad-separator.js.map",
    "invalid-mapping-not-a-string-1.js",
    "invalid-mapping-not-a-string-1.js.map",
    "invalid-mapping-not-a-string-2.js",
    "invalid-mapping-not-a-string-2.js.map",
    "invalid-mapping-segment-column-too-large.js",
    "invalid-mapping-segment-column-too-large.js.map",
    "invalid-mapping-segment-name-index-out-of-bounds.js",
    "invalid-mapping-segment-name-index-out-of-bounds.js.map",
    "invalid-mapping-segment-name-index-too-large.js",
    "invalid-mapping-segment-name-index-too-large.js.map",
    "invalid-mapping-segment-negative-column.js",
    "invalid-mapping-segment-negative-column.js.map",
    "invalid-mapping-segment-negative-name-index.js",
    "invalid-mapping-segment-negative-name-index.js.map",
    "invalid-mapping-segment-negative-original-column.js",
    "invalid-mapping-segment-negative-original-column.js.map",
    "invalid-mapping-segment-negative-original-line.js",
    "invalid-mapping-segment-negative-original-line.js.map",
    "invalid-mapping-segment-negative-relative-column.js",
    "invalid-mapping-segment-negative-relative-column.js.map",
    "invalid-mapping-segment-negative-relative-name-index.js",
    "invalid-mapping-segment-negative-relative-name-index.js.map",
    "invalid-mapping-segment-negative-relative-original-column.js",
    "invalid-mapping-segment-negative-relative-original-column.js.map",
    "invalid-mapping-segment-negative-relative-original-line.js",
    "invalid-mapping-segment-negative-relative-original-line.js.map",
    "invalid-mapping-segment-negative-relative-source-index.js",
    "invalid-mapping-segment-negative-relative-source-index.js.map",
    "invalid-mapping-segment-negative-source-index.js",
    "invalid-mapping-segment-negative-source-index.js.map",
    "invalid-mapping-segment-original-column-too-large.js",
    "invalid-mapping-segment-original-column-too-large.js.map",
    "invalid-mapping-segment-original-line-too-large.js",
    "invalid-mapping-segment-original-line-too-large.js.map",
    "invalid-mapping-segment-source-index-out-of-bounds.js",
    "invalid-mapping-segment-source-index-out-of-bounds.js.map",
    "invalid-mapping-segment-source-index-too-large.js",
    "invalid-mapping-segment-source-index-too-large.js.map",
    "invalid-mapping-segment-with-three-fields.js",
    "invalid-mapping-segment-with-three-fields.js.map",
    "invalid-mapping-segment-with-two-fields.js",
    "invalid-mapping-segment-with-two-fields.js.map",
    "invalid-mapping-segment-with-zero-fields.js",
    "invalid-mapping-segment-with-zero-fields.js.map",
    "invalid-vlq-missing-continuation.js",
    "invalid-vlq-missing-continuation.js.map",
    "invalid-vlq-non-base64-char.js",
    "invalid-vlq-non-base64-char.js.map",
    "names-missing.js",
    "names-missing.js.map",
    "names-not-a-list-1.js",
    "names-not-a-list-1.js.map",
    "names-not-a-list-2.js",
    "names-not-a-list-2.js.map",
    "names-not-string.js",
    "names-not-string.js.map",
    "second-source-original.js",
    "source-map-spec-tests.json",
    "sources-and-sources-content-both-null.js",
    "sources-and-sources-content-both-null.js.map",
    "sources-missing.js",
    "sources-missing.js.map",
    "sources-non-null-sources-content-null.js",
    "sources-non-null-sources-content-null.js.map",
    "sources-not-a-list-1.js",
    "sources-not-a-list-1.js.map",
    "sources-not-a-list-2.js",
    "sources-not-a-list-2.js.map",
    "sources-not-string-or-null.js",
    "sources-not-string-or-null.js.map",
    "sources-null-sources-content-non-null.js",
    "sources-null-sources-content-non-null.js.map",
    "transitive-mapping-original.js",
    "transitive-mapping-original.js.map",
    "transitive-mapping-three-steps.js",
    "transitive-mapping-three-steps.js.map",
    "transitive-mapping.js",
    "transitive-mapping.js.map",
    "typescript-original.ts",
    "unrecognized-property.js",
    "unrecognized-property.js.map",
    "valid-mapping-boundary-values.js",
    "valid-mapping-boundary-values.js.map",
    "valid-mapping-empty-groups.js",
    "valid-mapping-empty-groups.js.map",
    "valid-mapping-large-vlq.js",
    "valid-mapping-large-vlq.js.map",
    "valid-mapping-null-sources.js",
    "valid-mapping-null-sources.js.map",
    "version-missing.js",
    "version-missing.js.map",
    "version-not-a-number.js",
    "version-not-a-number.js.map",
    "version-numeric-string.js",
    "version-numeric-string.js.map",
    "version-too-high.js",
    "version-too-high.js.map",
    "version-too-low.js",
    "version-too-low.js.map",
    "version-valid.js",
    "version-valid.js.map",
  ]
}
